# dfa-cli

./: CMakeLists.txt  LICENSE  README.md  cmake-pipeline.yml
src/: State.cpp  State.h  UserMenu.cpp  UserMenu.h  main.cpp
